# competitive

./: .clang-format  .clangd_bkp  .gitignore  CMakeLists.txt  Makefile  README.md  geometria.cpp  input.txt  main.cpp  main.kt  main2.cpp  minCMakeLists.txt  road_nutella.cpp  run.bat  run.sh  template  trie.cpp
A2OJ/: Amusing _Joke.cpp  Bit++.cpp  Cakeminator.cpp  Chat_room.cpp  Fence.cpp  Football.cpp  I_love_%username%.cpp  LIghts_Out.cpp  Mashmokh_and_ACM.cpp  Nearly_Lucky_Number.cpp  Panoramix_Prediction.cpp  Petya_and_Strings.cpp  Present_from_Lena.cpp  Presents.cpp  Puzzles.cpp  Rank_List.cpp  Slightly_Decreasing_Permutations.cpp  Soft_Drinking.cpp  Stones_on_the_table.cpp  T-Primes.cpp  The_Child_and_Toy.cpp  The_Child_and_Toy2.cpp  The_Child_and_Toy3.cpp  Tram.cpp  Ultra-Fast_Mathematician.cpp  Way_Too_Long_Words.cpp  Word_Capitalizaton.cpp  Xenia_and_Ringroad.cpp  k-String.cpp
At127/: F.cpp
At212/: A.cpp  B.cpp  C.cpp
Avancado01/: A.cpp  B.cpp  B2.cpp  C.cpp  D.cpp
BS_Lista/: A.cpp  A2.cpp  B.cpp  C.cpp  D.cpp  E.cpp
Binary Search/: A.cpp  B.cpp  C.cpp  D.cpp  D2.cpp  E.cpp  F.cpp  F2.cpp
CF #688/: A.cpp  A2.cpp  B.cpp
CF361/: D.cpp
CF549/: B.cpp
CF719/: A.cpp  B.cpp
CF_547/: C.cpp  C_Oscar.cpp
CF_677/: A.cpp  B.cpp
CF_687/: A.cpp
CF_699/: A.cpp
CF_705/: A.cpp  B.cpp  B2.cpp  B3.cpp
CF_735/: A.cpp  B.cpp  C.cpp
CSES/: 1647.cpp
Contest #667/: B.cpp  Q.cpp  Question.cpp
Contest #670/: q.cpp
ECR_105/: A.cpp  B.cpp  C.cpp
ECR_106/: A.cpp  B.cpp
ECR_24/: D.cpp
EP2_ED/: E.cpp
EdCF_110/: A.cpp  B.cpp
EdCF_60/: D.cpp
EdCf 99/: A.cpp  B.cpp  B2.cpp  C.cpp  C2.cpp
Extras/: Nastya.cpp  Oscar.cpp  PowerCrisis.cpp  Rails.cpp  Rails2.cpp  test.cpp
Global 12/: A.cpp
Grafos/: A.cpp  B.cpp
ITMO_2Pointers/: A.cpp  B.cpp  F.cpp
Intro_cpp/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
LE_Matematica/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
Lista1_AdHoc1/: I.cpp
Lista_1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  G.cpp  H.cpp  I.cpp
Lista_2/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
Lista_2_ED/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  F2.cpp  F3.cpp  F4.cpp
Lista_6/: A.cpp  B.cpp  C.cpp  D.cpp
Lista_7/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
Lista_8/: A.cpp  B.cpp  C.cpp  D.cpp
Lista_PD/: A.cpp  teste.cpp
Machup_Supresa/: A.cpp  B.cpp  C.cpp
(+114 files in other folders)
